# deploy_render

./: .gitignore  README.md  agent_UI.py  agent_os.py  agent_streamlit_full.py  exemplo1.py  exemplo2.py  primeiro_deploy.py  pyproject.toml  requirements.txt
01_deploy/: exemplo2.py
agent-ui/: package-lock.json
tmp/: agent.db
tmp/chromadb/: chroma.sqlite3
