[project]
name = "deploy-ia-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[chroma,openai,pdf]>=2.5.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
]
